[project]
name = "acs-nativity"
version = "0.1.0"
description = "Tools for accessing and visualizing historical ACS 1-Year nativity data for the United States and subnational geographies."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Ari Lamstein", email = "arilamstein@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "censusdis>=1.4.0",
    "pandas>=1.5",
    "plotly>=6.0",
]

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ruff>=0.15.4",
]
