[project]
name = "acs-nativity"
version = "0.1.2"
description = "Tools for accessing and visualizing historical ACS 1-Year nativity data for the United States and subnational geographies."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Ari Lamstein", email = "arilamstein@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "censusdis>=1.4.0",
    "pandas>=1.5",
    "plotly>=6.0",
]
keywords = ["census", "ACS", "demographics", "immigration", "nativity", "population"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Sociology",
]

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "mypy>=1.19.1",
    "pandas-stubs>=2.3.3.260113",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.4",
    "streamlit>=1.55.0",
]

[tool.ruff.lint]
select = ["D"]  # enable pydocstyle family
ignore = [
    "D203",  # incompatible with Google style
    "D212",  # incompatible with Google style
    "D213",  # incompatible with Google style
    "D402",  # no need to match function name in docstring
    "D401",  # imperative mood is too strict
    "D205",  # blank-line rules too strict
    "D202",  # blank-line rules too strict
    "D413",  # blank-line rules too strict
]

[tool.ruff.lint.per-file-ignores]
"notebooks/getting_started.ipynb" = ["E402"]
"tests/*.py" = ["D"]

[tool.ruff]
exclude = ["scratch.ipynb"]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true
no_implicit_optional = true
exclude = "tests/.*"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:The 'shapely.geos' module is deprecated"
]

[project.urls]
Homepage = "https://github.com/arilamstein/acs-nativity"
Issues = "https://github.com/arilamstein/acs-nativity/issues"

[tool.uv_build]
include = ["acs_nativity/py.typed"]
